# CryptoPG

./: CMakeLists.txt  KeyManager.cpp  KeyManager.h  README.md  Signer.hpp  Verifier.hpp  cryptopg.proto  cryptopg_client.cpp  cryptopg_server.cpp  file_demo.cpp  main.cpp
tests/: CMakeLists.txt  keymanager_test.cpp  sample_test.cpp
